<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:key="PREF_CATEGORY_GENERAL"
        android:title="@string/preference_category_general_title">
        <ListPreference
            android:defaultValue="PREF_UNITS_IMPERIAL"
            android:entries="@array/preferences_units_labels"
            android:entryValues="@array/preferences_units_values"
            android:key="PREF_UNITS"
            android:title="@string/preference_units_title" />

        <SwitchPreference
            android:switchTextOn="ON"
            android:switchTextOff="OFF"
            android:defaultValue="false"
            android:key="PREF_LISTEN_TO_HEADSET_BUTTON"
            android:summary="@string/preference_listenToHeadsetButton_summary"
            android:title="@string/preference_listenToHeadsetButton_title" />
        <SwitchPreference
            android:switchTextOn="ON"
            android:switchTextOff="OFF"
            android:defaultValue="false"
            android:key="PREF_RECORD_CADENCE"
            android:title="@string/preference_recordCadence_title" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/preference_smartwatches_title">
        <SwitchPreference
            android:switchTextOn="ON"
            android:switchTextOff="OFF"
            android:defaultValue="false"
            android:key="PREF_ANDROID_WEAR"
            android:summary="@string/preference_androidWear_summary"
            android:title="@string/preference_androidWear_title" />
    </PreferenceCategory>
    <PreferenceCategory
        android:key="PREF_CATEGORY_HEART_RATE"
        android:title="@string/preference_heartRate_title">
        <Preference
            android:icon="@drawable/ic_action_scan"
            android:key="PREF_HEART_RATE_SCAN"
            android:summary="@string/preference_heartRate_scan_summary"
            android:title="@string/preference_heartRate_scan_title" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/preference_importExport_title">
        <Preference
            android:icon="@drawable/ic_action_cloud_sync"
            android:key="SYNC_WITH_GOOGLE_DRIVE"
            android:summary="Synchronize with Google Drive"
            android:title="Synchronize with Google Drive" />
        <Preference
            android:icon="@drawable/ic_action_export"
            android:key="PREF_EXPORT"
            android:summary="@string/preference_export_summary"
            android:title="@string/preference_export_title" />
        <Preference
            android:icon="@drawable/ic_action_import"
            android:key="PREF_IMPORT"
            android:summary="@string/preference_import_summary"
            android:title="@string/preference_import_title" />
    </PreferenceCategory>

</PreferenceScreen>