<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:weightSum="1">

    <CheckedTextView
        android:id="@+id/txtDeleteRemoteItems"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:drawableRight="@drawable/google_drive_sync_item_status"
        android:gravity="center_vertical"
        android:text="@string/googleDriveSync_deleteRemoteItems"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <CheckedTextView
        android:id="@+id/txtDeleteLocalItems"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:drawableRight="@drawable/google_drive_sync_item_status"
        android:gravity="center_vertical"
        android:text="@string/googleDriveSync_deleteLocalItems"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <CheckedTextView
        android:id="@+id/txtUploadNewLocalItems"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:drawableRight="@drawable/google_drive_sync_item_status"
        android:gravity="center_vertical"
        android:text="@string/googleDriveSync_uploadNewLocalItems"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <ProgressBar
        android:id="@+id/pgbUploadNewLocalItems"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="false"
        tools:max="100"
        tools:progress="50" />

    <CheckedTextView
        android:id="@+id/txtDownloadNewRemoteItems"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:drawableRight="@drawable/google_drive_sync_item_status"
        android:gravity="center_vertical"
        android:text="@string/googleDriveSync_downloadNewRemoteItems"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <ProgressBar
        android:id="@+id/pgbDownloadNewRemoteItems"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="false"
        tools:max="100"
        tools:progress="50" />

    <Space
        android:layout_width="0px"
        android:layout_height="0px"
        android:layout_weight="1" />

    <TextView
        android:id="@+id/txtSuccess"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:drawableLeft="@drawable/ic_google_drive_sync_success"
        android:drawablePadding="8dp"
        android:gravity="center_vertical"
        android:text="@string/googleDriveSync_success"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:visibility="gone" />

    <TextView
        android:id="@+id/txtFail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:drawableLeft="@drawable/ic_google_drive_sync_fail"
        android:drawablePadding="8dp"
        android:gravity="center_vertical"
        android:text="@string/googleDriveSync_fail"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:visibility="gone" />

</LinearLayout>
